--- a/docs/UniSwap_AMM_Study.mdx
+++ b/docs/UniSwap_AMM_Study.mdx
@@ -902,6 +902,7 @@ Core contracts have checks to make sure they aren't cheated on. But they don't p
 ## Uniswap v3 Source Code Analysis (briefly)
 
 - https://youtu.be/WCLsIcjLSXc
+- https://liaoph.com/uniswap-v3-1/
 
 ## Credits
 
@@ -909,16 +910,10 @@ Core contracts have checks to make sure they aren't cheated on. But they don't p
 
 [Solidity by Example - Events](https://solidity-by-example.org/events/)
 
-https://medium.com/@chiqing/uniswap-v2-explained-beginner-friendly-b5d2cb64fe0f
+[Uniswap Smart Contract Breakdown](https://betterprogramming.pub/uniswap-smart-contract-breakdown-ea20edf1a0ff)
 
-https://betterprogramming.pub/uniswap-smart-contract-breakdown-ea20edf1a0ff
+[Uniswap Smart Contract Breakdown - Part 2](https://betterprogramming.pub/uniswap-smart-contract-breakdown-part-2-b9ea2fca65d1)
 
-https://betterprogramming.pub/uniswap-smart-contract-breakdown-part-2-b9ea2fca65d1
+[ERC20 Smart Contract Breakdown](https://coinsbench.com/erc20-smart-contract-breakdown-9dab65cec671)
 
-https://coinsbench.com/erc20-smart-contract-breakdown-9dab65cec671
-
-https://ethereum.org/en/developers/tutorials/uniswap-v2-annotated-code/
-
-https://ilamanov.medium.com/difference-between-uniswap-versions-877619a5bce2
-
-https://ilamanov.medium.com/how-uniswap-pools-are-implemented-b50907c7903a
+[Uniswap v2 Annotated Code](https://ethereum.org/en/developers/tutorials/uniswap-v2-annotated-code/)
